tests/ui/feature-gates/feature-gate-static_align.stderr
error[E0658]: the `#[rustc_align_static]` attribute is an experimental feature
  --> $DIR/feature-gate-static_align.rs:3:1
   |
LL | #[rustc_align_static(16)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #146177 <https://github.com/rust-lang/rust/issues/146177> for more information
   = help: add `#![feature(static_align)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: the `#[rustc_align_static]` attribute is an experimental feature
  --> $DIR/feature-gate-static_align.rs:8:5
   |
LL |     #[rustc_align_static(16)]
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #146177 <https://github.com/rust-lang/rust/issues/146177> for more information
   = help: add `#![feature(static_align)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
